# quadcopter-simulation

./: CMakeLists.txt  README.md
quadcopter_simulation/: irr_renderer.cpp  irr_renderer.h  stabilizer.h
